[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11"
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.7"
conquer-once = { version = "0.4", default-features = false }
log = "0.4"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.noto-sans-mono-bitmap]
version = "0.2"
default-features = false
features = [
    "regular",
    "size_16",
    "unicode-basic-latin",
    "unicode-specials",
]